// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Component should handle children as a label: children label radio 1`] = `
<div
  class="pf-c-radio quipucords-form__radio "
>
  <input
    aria-invalid="false"
    class="pf-c-radio__input"
    data-ouia-component-id="OUIA-Generated-Radio-5"
    data-ouia-component-type="PF4/Radio"
    data-ouia-safe="true"
    id="generatedid-"
    name="generatedid-"
    type="radio"
    value=""
  />
  <label
    class="pf-c-radio__label"
    for="generatedid-"
  >
    lorem ipsum
  </label>
</div>
`;

exports[`Radio Component should handle disabled, checked: active 1`] = `
<div
  class="pf-c-radio pf-m-standalone quipucords-form__radio "
>
  <input
    aria-invalid="false"
    aria-label="radio input"
    class="pf-c-radio__input"
    data-ouia-component-id="OUIA-Generated-Radio-3"
    data-ouia-component-type="PF4/Radio"
    data-ouia-safe="true"
    id="generatedid-"
    name="generatedid-"
    type="radio"
  />
</div>
`;

exports[`Radio Component should handle disabled, checked: checked 1`] = `
<div
  class="pf-c-radio pf-m-standalone quipucords-form__radio "
>
  <input
    aria-invalid="false"
    aria-label="radio input"
    checked=""
    class="pf-c-radio__input"
    data-ouia-component-id="OUIA-Generated-Radio-4"
    data-ouia-component-type="PF4/Radio"
    data-ouia-safe="true"
    id="generatedid-"
    name="generatedid-"
    type="radio"
  />
</div>
`;

exports[`Radio Component should handle disabled, checked: disabled 1`] = `
<div
  class="pf-c-radio pf-m-standalone quipucords-form__radio "
>
  <input
    aria-invalid="false"
    aria-label="radio input"
    class="pf-c-radio__input"
    data-ouia-component-id="OUIA-Generated-Radio-2"
    data-ouia-component-type="PF4/Radio"
    data-ouia-safe="true"
    disabled=""
    id="generatedid-"
    name="generatedid-"
    type="radio"
  />
</div>
`;

exports[`Radio Component should render a basic component: basic component 1`] = `
<div
  class="pf-c-radio pf-m-standalone quipucords-form__radio "
>
  <input
    aria-invalid="false"
    aria-label="radio input"
    class="pf-c-radio__input"
    data-ouia-component-id="OUIA-Generated-Radio-1"
    data-ouia-component-type="PF4/Radio"
    data-ouia-safe="true"
    id="generatedid-"
    name="generatedid-"
    type="radio"
    value=""
  />
</div>
`;

exports[`Radio Component should return an emulated onChange event: emulated event 1`] = `
{
  "checked": true,
  "currentTarget": {},
  "id": "generatedid-",
  "keyCode": undefined,
  "name": "generatedid-",
  "persist": [Function],
  "target": {},
  "value": undefined,
}
`;
